# Chip8pp

./: .gitmodules  CMakeLists.txt  README.md
include/: Chip8.hpp
include/glad/: gl.h
resources/shaders/: grid.f.glsl  grid.v.glsl
src/: Chip8.cpp  main.cpp  test-main.cpp
